cluster/kubernetes/rook-ceph/rook-ceph/ingress/ceph-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: ceph-dashboard
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
